result section scrollbar visibility fixed

--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ code{
     height: 535px;
     width: 100%;
     border: 1px solid #ccc;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .input-icon-wrap {
     border: 1px solid #ddd;
